--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,15 +1,22 @@
-h1 {
+/* h1 {
+  font-size: 20px;
+  font-weight:bold;
+  text-align:left;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+} */
+h2 {
   font-size: 15px;
   font-weight: bold;
   text-align:left;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-left: 20px;
 }
 
-h2 {
+h3 {
   font-size: 12px;
   font-weight: bold;
   text-align:left;
@@ -25,9 +32,24 @@ p {
   text-align:left;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+#title {
+  font-size: 20px;
+  font-weight:bold;
+  text-align:left;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#titleLink {
+  color: white;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: underline;
 }
 
 img {
@@ -35,6 +57,14 @@ img {
   margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.title {
+  background-color: red;
+  padding-right: 10px;
+  padding-left: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .main {
